# dllinject

./: .gitignore  CMakeLists.txt  README.md  main.cpp  trcapi.cpp
